Commit das telas acessando BD e trocando para o Pomelo.EntityFrameworkCore.MySql para acessar o banco pq existe um bug na classe padrão do Entity

--- a/EnerSave/EnerSave/EnerSave.csproj
+++ b/EnerSave/EnerSave/EnerSave.csproj
@@ -10,6 +10,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dominio\" />
+    <Folder Include="Views\ViewModels\" />
   </ItemGroup>
   
 </Project>
